--- a/css/style_smartphone.less
+++ b/css/style_smartphone.less
@@ -122,10 +122,9 @@ figcaption {
     color: #dfdfd8;
 }
 
-figure.adframe {
-    width: auto;
-    min-width: 206px;
-    height: 206px;
+figure.adfigure {
+    width: 306px;
+    height: 256px;
 }
 
 #adframe {
