--- a/css/style_tablet.less
+++ b/css/style_tablet.less
@@ -8,6 +8,10 @@ figure.fig_right {
     margin: 0 0 0.75em 0.75em;
 }
 
+figure.fig_full {
+    width: 100%;
+}
+
 figure.fig_half {
     width: 50%;
 }
